@@ -397,23 +397,6 @@ def choose_file *paths
 end
 
 
-def set_default_options opts
-  dotfiles = File.join(ENV['HOME'], '.dotfiles')
-  opts[:dotfiles_path] ||= dotfiles if test(?d, dotfiles)
-
-  if opts[:dotfiles_path]
-    raise "#{opts[:dotfiles_path]} doesn't exist!" unless test(?d, opts[:dotfiles_path])
-    opts[:vimdir_path] ||= File.join(opts[:dotfiles_path], 'vim')
-    opts[:vimrc_path] ||= choose_file(File.join([opts[:dotfiles_path], 'vim', 'vimrc']),
-                                      File.join([opts[:dotfiles_path], 'vimrc']))
-  else
-    opts[:vimdir_path] ||= File.join(ENV['HOME'], '.vim')
-    opts[:vimrc_path] ||= choose_file(File.join([ENV['HOME'], '.vim', 'vimrc']),
-                                      File.join([ENV['HOME'], '.vimrc']))
-  end
-end
-
-
 def ensure_vim_environment config
   ensure_dir config[:vimdir_path]
   ensure_dir "#{config[:vimdir_path]}/autoload"
@@ -445,10 +428,11 @@ def read_configuration config
   process_options config, File.open(conf_file).readlines, "in #{conf_file} line" if test(?f, conf_file)
   process_options config, ARGV, "in command line argument"
 
-  set_default_options config
+  config[:vimdir_path] ||= File.join(ENV['HOME'], '.vim')
+  config[:vimrc_path] ||= choose_file(File.join([ENV['HOME'], '.vim', 'vimrc']),
+                                    File.join([ENV['HOME'], '.vimrc']))
 
   config.keys.sort.each { |k| puts "# option #{k} = #{config[k].inspect}" } if config[:verbose]
-  config.delete :dotfiles_path       # Ensure it is not used accidentally later.
 end
 
 
@@ -463,7 +447,6 @@ vim-update-bundles [options...]
     -s --submodule:  store bundles as git submodules
     --vimdir-path:   path to ~/.vim directory
     --vimrc-path:    path to ~/.vimrc directory
-    --dotfiles-path: path to your dotfiles if different than $HOME.
 EOL
 end
 
@@ -480,7 +463,6 @@ config = {
   :v => :verbose, :s => :submodule, :n => :no_updates,
   :h => :help, :'?' => :help, :V => :version,
 
-  :dotfiles_path => nil,     # Full path to the dot files directory.
   :vimdir_path   => nil,     # Full path to ~/.vim (creates symlink if not in $HOME).
   :vimrc_path    => nil,     # Full path to ~/.vimrc (creates symlink if not in $HOME).
 
